commit config api
adicionado o codigo da api do google

--- a/projetosistemaback/public/login.html
+++ b/projetosistemaback/public/login.html
@@ -23,17 +23,17 @@
                 <h2 class="title title-second">criar uma conta</h2>
                 <div class="social-media">
                     <ul class="list-social-media">
-                        <a class="link-social-media" href="#">
+                        <a class="link-social-media" href="#" target="_blank">
                             <li class="item-social-media">
                                 <i class="fab fa-facebook-f"></i>        
                             </li>
                         </a>
-                        <a class="link-social-media" href="#">
+                        <a class="link-social-media" href="http://localhost:3000/auth/google" target="_blank">
                             <li class="item-social-media">
                                 <i class="fab fa-google-plus-g"></i>
                             </li>
                         </a>
-                        <a class="link-social-media" href="#">
+                        <a class="link-social-media" href="#" target="_blank">
                             <li class="item-social-media">
                                 <i class="fab fa-linkedin-in"></i>
                             </li>
