--- a/projetosistemaback/public/login.html
+++ b/projetosistemaback/public/login.html
@@ -28,7 +28,7 @@
                                 <i class="fab fa-facebook-f"></i>        
                             </li>
                         </a>
-                        <a class="link-social-media" href="http://localhost:3000/auth/google" target="_blank">
+                        <a class="link-social-media" href="http://localhost:3000/auth/google">
                             <li class="item-social-media">
                                 <i class="fab fa-google-plus-g"></i>
                             </li>
@@ -88,7 +88,7 @@
                                 <i class="fab fa-facebook-f"></i>
                             </li>
                         </a>
-                        <a class="link-social-media" href="http://localhost:3000/auth/google" target="_blank">
+                        <a class="link-social-media" href="http://localhost:3000/auth/google">
                             <li class="item-social-media">
                                 <i class="fab fa-google-plus-g"></i>
                             </li>
