Adicionado um imagem de perfil
Uma imagem de perfil um perfil de jogado um cadastro funcionando

--- a/projetosistemaback/public/profile.html
+++ b/projetosistemaback/public/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Perfil</title>
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="../../style/profile.css">
     <style>
         .profile-container{max-width:720px;margin:80px auto;padding:20px;background:#fff;border-radius:8px}
         .profile-header{display:flex;align-items:center;gap:16px}
