Remoção de login

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li><a href="#cont1" class="text-menu">Sobre Nós</a></li>
                     <li><a href="#footer" class="text-menu">Contato</a></li>
                     <li><a href="./projetosistemaback/public/services.html" class="text-menu" target="_blank">Serviços</a></li>
-                    <li><a id="menu-login" href="./projetosistemaback/public/login.html" class="text-menu">Login</a></li>
+                    <!-- <li><a id="menu-login" href="./projetosistemaback/public/login.html" class="text-menu">Login</a></li> -->
                     <span class="laser"></span>
                 </ul>
             </nav>
@@ -80,6 +80,21 @@
                     </div>
                     <div class="tec">
                         <img class="tecInformadas" src="./img/icon-c.svg" alt="C">
+                    </div>
+                </div>
+            </div>
+            <div class="card3">
+                <div class="foto">
+                    <img src="./img/foto-julio.svg" alt="Julio Cesar">
+                </div>
+                <div class="info2">
+                    <p class="nomeJulio">Daniel</p>
+                    <p class="tipoDevJulio">Desenvolvedor Linux</p>
+                    <div class="tec">
+                        <img class="tecInformadas" src="img/linux.jpeg" alt="Python">
+                    </div>
+                    <div class="tec">
+                        <img class="tecInformadas" src="img/bash.jpeg" alt="Java">
                     </div>
                 </div>
             </div>
