Adicionado um media query menu
Adicionei um media query para menu onde eu possa colocar o menu statico no top da tela para tablet e mobile

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </svg>
 
                 </button>
-                <ul class="esconder menu">
+                <ul class="esconder">
                     <li><a href="/" class="text-menu">Home</a></li>
                     <li><a href="#cont1" class="text-menu">Sobre Nós</a></li>
                     <li><a href="#footer" class="text-menu">Contato</a></li>
@@ -245,7 +245,7 @@
         </div>
     </footer>
 
-    <script src="./script/menu.js"></script>
+    <!-- <script src="./script/menu.js"></script> -->
     <script src="./script/script.js"></script>
 </body>
 </html>
